[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/dialogue/DialoguePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/interface/gui/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/fonts/RetroGaming.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/interface/fonts/Retro Gaming.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/interface/gui/game_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 11
extra_spacing_top = -3
font_data = ExtResource( 4 )

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = 12.0
margin_right = -8.0
margin_bottom = -55.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePanel" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 112.0
margin_right = -304.0
margin_bottom = -80.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NamePanel"]
margin_right = 64.0
margin_bottom = 24.0
size_flags_horizontal = 9
size_flags_vertical = 12
text = "Anon"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePanel" type="Panel" parent="NamePanel/Name"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 2.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -85.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -36.0
margin_bottom = -4.0
custom_fonts/normal_font = SubResource( 1 )
text = "Text Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNext" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.7284
margin_top = 40.7971
margin_right = -1.72839
margin_bottom = 76.7971
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePlayer" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="pressed" from="Panel/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
